# ansible-alicloud-magic-modules

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  requirements-dev.txt
definitions/: _schema.yaml  ack_cluster.yaml  acr_instance.yaml  actiontrail_trail.yaml  adb_cluster.yaml  aiearth_dataset.yaml  aiearth_project.yaml  alb_load_balancer.yaml  alimt_project.yaml  alinlp_service.yaml  api_gateway_group.yaml  bailian_app.yaml  bailian_fine_tune_job.yaml  bailian_index.yaml  bailian_knowledge_base.yaml  bailian_prompt_template.yaml  bastionhost_instance.yaml  cdn_domain.yaml  chatbot_instance.yaml  chatbot_knowledge.yaml  cloud_firewall_policy.yaml  cms_alarm.yaml  config_rule.yaml  dashscope_api_key.yaml  dataworks_project.yaml  ddos_instance.yaml  dnat_entry.yaml  dns_record.yaml  ecs_disk.yaml  ecs_image.yaml  ecs_instance.yaml  ecs_key_pair.yaml  ecs_security_group.yaml  ecs_security_group_rule.yaml  ecs_snapshot.yaml  eip.yaml  eip_association.yaml  elasticsearch_instance.yaml  eventbridge_bus.yaml  facebody_database.yaml  (+47 more)
generator/: __init__.py  cli.py  parser.py  renderer.py  utils.py
generator/templates/: module.py.j2  module_info.py.j2
tests/: conftest.py  test_definitions.py  test_parser.py  test_renderer.py
